<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Video Settings -->
    <PreferenceCategory
        android:title="@string/video_settings_category"
        app:iconSpaceReserved="false"
        android:layout="@layout/preference_category">

        <ListPreference
            android:key="video_quality"
            android:title="@string/video_quality_title"
            android:summary="@string/video_quality_summary"
            android:entries="@array/video_quality_entries"
            android:entryValues="@array/video_quality_values"
            android:defaultValue="medium" />

        <EditTextPreference
            android:key="custom_bitrate"
            android:title="@string/custom_bitrate_title"
            android:summary="@string/custom_bitrate_summary"
            android:dialogTitle="@string/custom_bitrate_dialog_title"
            android:dialogMessage="@string/custom_bitrate_dialog_message"
            android:inputType="number"
            android:defaultValue="8"
            android:dependency="video_quality" />

        <ListPreference
            android:key="resolution"
            android:title="@string/resolution_title"
            android:summary="@string/resolution_summary"
            android:defaultValue="1920x1080" />

        <ListPreference
            android:key="frame_rate"
            android:title="@string/frame_rate_title"
            android:summary="@string/frame_rate_summary"
            android:entries="@array/frame_rate_entries"
            android:entryValues="@array/frame_rate_values"
            android:defaultValue="30" />

    </PreferenceCategory>

    <!-- Audio Settings -->
    <PreferenceCategory
        android:title="@string/audio_settings_category"
        app:iconSpaceReserved="false"
        android:layout="@layout/preference_category">

        <ListPreference
            android:key="audio_bitrate"
            android:title="@string/audio_bitrate_title"
            android:summary="@string/audio_bitrate_summary"
            android:entries="@array/audio_bitrate_entries"
            android:entryValues="@array/audio_bitrate_values"
            android:defaultValue="128" />

        <ListPreference
            android:key="audio_sample_rate"
            android:title="@string/audio_sample_rate_title"
            android:summary="@string/audio_sample_rate_summary"
            android:entries="@array/audio_sample_rate_entries"
            android:entryValues="@array/audio_sample_rate_values"
            android:defaultValue="44100" />

    </PreferenceCategory>

    <!-- Storage Information -->
    <PreferenceCategory
        android:title="@string/storage_estimate_category"
        app:iconSpaceReserved="false"
        android:layout="@layout/preference_category">

        <Preference
            android:key="storage_estimate"
            android:title="@string/storage_estimate_title"
            android:selectable="false" />

    </PreferenceCategory>

</PreferenceScreen>

